2007-10-07  Dmitry Dulepov  <dmitry@typo3.org>

 * Added hooks for extensions to provide configuration
 * Autoconfiguration is moved to processing class
 * Removed lateAddToCache because it had bad side effects

2007-10-01  Dmitry Dulepov  <dmitry@typo3.org>

 * Fixed wrong intval on string md5

2007-09-20  Dmitry Dulepov  <dmitry@typo3.org>

 * Changed tx_realurl_urlencodecache and tx_realurl_urldecodecache to use full md5
 * Added lots of calls to TYPO3_DB->sql_free_result to free PHP resources
 * Default autoconfiguration file location is now in typo3conf
 * Fixed bug 4995: 301 redirection for expired pagepaths broken

2007-09-18  Dmitry Dulepov  <dmitry@typo3.org>

 * Removed "DEFAULT '0'" from "uid" column in tx_realurl_uniqalias
 * Fixed bug 5369: Converting to InnoDB
 * Changed primary key for tx_realurl_errorlog to prevent errors about duplicate entries
 * Optimized query to tx_realurl_errorlog
 * 'suggest' static_info_tables instead of requiring it

2007-09-14  Dmitry Dulepov  <dmitry@typo3.org>

 * If decoded entry is not in cache, it will be added there when TSFE has completed request

2007-09-12  Dmitry Dulepov  <dmitry@typo3.org>

 * Fixed bug 2402: RealURL+tx_realurl_advanced: xxx was not a keyword for a postVarSet
 * Fixed bug 4495: When logged in from BE, produces error: Segment "zzz" was not a keyword for a postVarSet as expected
 * Fixed bug 5784: function pageAliasToId is not DBAL-safe

2007-09-11  Dmitry Dulepov  <dmitry@typo3.org>

 * Added searching for rootpage_id by domain name (taking redirects into account)

2007-09-10  Dmitry Dulepov  <dmitry@typo3.org>

 * Fixed bug 4994: tx_realurl_pathcache must not be flushed!
 * Fixed bug 5150: Remove tx_realurl_pathcache table from MySQL Query Cache
 * Fixed bug 6257: pointless rootline lookup in multi-domain enviroment
 * Fixed bug 6051: RealURL does not set GET vars for use with TypoLink
 * Forced firstHitPathCache if no postVarSets or fixedPostVars defined
